test/fails/bad_geo/geobasics2.lgl
prototype geometry {
    object point;
    object vector;
}

with frame(2) r:
coordinate cart2 : geometry {
    object point is float[2];
    object vector is float[2];
}

with frame(3) r:
coordinate cart3 : geometry {
    object point is float[3];
    object vector is float[3];
}

with frame(2) r:
coordinate polar : geometry {
    object point is float[2];
    object vector is float[2];
}

with frame(3) r:
coordinate hom : geometry {
    object point is float[4];
    object vector is float[3];
}

frame world has dimension 3;
frame plane has dimension 2;

void main() {
    cart3<polar>.point pos = [1., 2., 3.]; // Bad reference frame dimension

    print 1;
}
